fixed positioning of livesearch to not overflow the screen on the right and have horizontal scrollbar.
svn path=/plonetheme.sunburst/trunk/; revision=32487

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -197,6 +197,7 @@ body.smallText { font-size: 85%; }
 
 #LSResult {
 	position: absolute;
+	right: 0;
 	background: White;
 	margin: -1.5em 0 0 -7em;
 }
